--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <h1 class="col-md-20 text-center">
                 <br><br>
-                <b>NeRFInvertor</b>: High Fidelity NeRF-GAN Inversion for <br> Single-shot Real Image Animation <br>
+                <b>Cracking the Code of Juxtaposition</b>: Can AI Models Understand the Humorous Contradictions <br>
                 <!-- <small>
                     NeurIPS 2022 (Spotlight)
                 </small> -->
@@ -35,53 +35,36 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
-					<li>
+                    <li>
+                        <a href="XXXXXX" style="font-size: 16px;">
+                            Zhe Hu
+                        </a>
+                        <sup>1</sup>
+                    </li>
+                    <li>
+                        <a href="XXXXXX" style="font-size: 16px;">
+                            Tuo Liang
+                        </a>
+                        <sup>2</sup>
+                    </li>
+                    <li>
                         <a href="https://yin-yu.github.io/" style="font-size: 16px;">
                             Yu Yin
                         </a>
-                        <sup>1</sup>
-                    </li>
-                    <li>
-                        <a href="https://kamranghasedi.github.io/" style="font-size: 16px;">
-                            Kamran Ghasedi
-                        </a>
                         <sup>2</sup>
                     </li>
-					   <li>
-                        <a href="https://www.microsoft.com/en-us/research/people/musclewu/" style="font-size: 16px;">
-                            HsiangTao Wu
-                        </a>
-                        <sup>2</sup>
-                    </li>
-                    <li>
-                        <a href="https://jlyang.org/" style="font-size: 16px;">
-                            Jiaolong Yang
-                        </a>
-                        <sup>2</sup>
-                    </li>
-                    <li>
-                        <a href="http://www.xtong.info/" style="font-size: 16px;">
-                            Xin Tong
-                        </a>
-                        <sup>2</sup>
-                    </li>
-                    <li>
-                        <a href="http://www1.ece.neu.edu/~yunfu/" style="font-size: 16px;">
-                            Yun Fu
-                        </a>
-                        <sup>1</sup>
-                    </li><br>
+                    <br>
                     <a></a><br>
 			        <li>
                         <sup>1</sup>
-                        <a href="https://www.northeastern.edu/" style="font-size: 16px;">
-                            Northeastern University
+                        <a style="font-size: 16px;">
+                            The Hong Kong Polytechnic University
                         </a>
                         </li>
 			        <li>
                         <sup>2</sup>
-                        <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/" style="font-size: 16px;">
-                            Microsoft Research
+                        <a style="font-size: 16px;">
+                            Case Western Reserve University 
                         </a>
 			</li>
 
