--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0040)https://yuyin1.github.io/NeRFInvertor_Homepage/ -->
+<!-- saved from url=(0040)https://yuyin1.github.io/YESBUT_Homepage/ -->
 <html><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
@@ -10,10 +10,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="./NeRFInvertor_files/bootstrap.min.css">
-    <link rel="stylesheet" href="./NeRFInvertor_files/font-awesome.min.css">
-    <link rel="stylesheet" href="./NeRFInvertor_files/codemirror.min.css">
-    <link rel="stylesheet" href="./NeRFInvertor_files/app.css">
+    <link rel="stylesheet" href="./YESBUT_files/bootstrap.min.css">
+    <link rel="stylesheet" href="./YESBUT_files/font-awesome.min.css">
+    <link rel="stylesheet" href="./YESBUT_files/codemirror.min.css">
+    <link rel="stylesheet" href="./YESBUT_files/app.css">
 
 
 
