--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <br><br>
                 <b>Cracking the Code of Juxtaposition</b>: Can AI Models Understand the Humorous Contradictions <br>
                 <!-- <small>
-                    NeurIPS 2022 (Spotlight)
+                    Submitted (Spotlight)
                 </small> -->
             </h1>
             <hr style="margin-top:0px">
@@ -42,7 +42,7 @@
                         <sup>1</sup>
                     </li>
                     <li>
-                        <a href="XXXXXX" style="font-size: 16px;">
+                        <a href="https://Tuo-Liang.github.io" style="font-size: 16px;">
                             Tuo Liang
                         </a>
                         <sup>2</sup>
@@ -167,7 +167,8 @@
                 </h2>
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-size: 16px;">
-                    Nerf-based Generative models have shown impressive capacity in generating high-quality images with consistent 3D geometry. Despite successful synthesis of fake identity images randomly sampled from latent space, adopting these models for generating face images of real subjects is still a challenging task due to its so-called inversion issue. In this paper, we propose a universal method to surgically fine-tune these NeRF-GAN models in order to achieve high-fidelity animation of real subjects only by a single image. Given the optimized latent code for an out-of-domain real image, we employ 2D loss functions on the rendered image to reduce the identity gap. Furthermore, our method leverages explicit and implicit 3D regularizations using the in-domain neighborhood samples around the optimized latent code to remove geometrical and visual artifacts. Our experiments confirm the effectiveness of our method in realistic, high-fidelity, and 3D consistent animation of real faces on multiple NeRF-GAN models across different datasets.
+                    Recent advancements in large multimodal language models have demonstrated remarkable proficiency across a wide range of tasks. Yet, these models still struggle with understanding the nuances of human humor through juxtaposition, particularly when it involves nonlinear narratives that underpin many jokes and humor cues. This paper investigates this challenge by focusing on comics with contradictory narratives, where each comic consists of two panels that create a humorous contradiction. We introduce the YESBUT benchmark, which comprises tasks of varying difficulty aimed at assessing AI’s capabilities in recognizing and interpreting these comics, ranging from literal content comprehension to deep narrative reasoning. Through extensive experimentation and analysis of recent commercial or open-sourced large (vision) language models, we assess their capability to comprehend the complex interplay of the narrative humor inherent in these comics.
+Our results show that even state-of-the-art models still lag behind human performance on this task. Our findings offer insights into the current limitations and potential improvements for AI in understanding human creative expressions.
                 </p>
             </div>
         </div>
