--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>NeRFInvertor</title>
+    <title>Can AI Models Understand the Humorous Contradictions</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
