--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-md-12 text-center">
                 <ul class="list-inline">
                     <li>
-                        <a href="XXXXXX" style="font-size: 16px;">
+                        <a href="https://derekhu.com/" style="font-size: 16px;">
                             Zhe Hu
                         </a>
                         <sup>1</sup>
@@ -78,7 +78,7 @@
 		<br>
 		<div class="row">
 		<div class="col-md-12 text-center">
-<!-- 			<a href="https://arxiv.org/abs/2206.07255" target="blank"><span style="text-decoration:underline;font-size:20px">arXiv:2206.07255</span></a> -->
+<!-- 			<a href="https://arxiv.org/html/2405.19088v1" target="blank"><span style="text-decoration:underline;font-size:20px">arXiv:2206.07255</span></a> -->
 		</div>
 		</div>
 
@@ -87,29 +87,29 @@
             <div class="col-md-4 col-md-offset-4 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Yin_NeRFInvertor_High_Fidelity_NeRF-GAN_Inversion_for_Single-Shot_Real_Image_Animation_CVPR_2023_paper.pdf">
-                            <img src="./NeRFInvertor_files/paper_icon.png" height="60px">
+                        <a href="XXXX">
+                            <img src="./YESBUT_files/paper_icon.png" height="60px">
                             <h4><strong>Paper</strong></h4>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://arxiv.org/abs/2211.17235">
-                            <img src="./NeRFInvertor_files/arxiv.png" height="60px">
+                        <a href="https://arxiv.org/html/2405.19088v1">
+                            <img src="./YESBUT_files/arxiv.png" height="60px">
                             <h4><strong>ArXiv</strong></h4>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/YuYin1/NeRFInvertor">
-                            <img src="./NeRFInvertor_files/github_icon.jpeg" height="60px">
+                        <a href="XXXX">
+                            <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
                     </li>
 
                     <!-- <li>
                         <a onclick="alert(&#39;Code will be released soon.&#39;)">
-                            <img src="./NeRFInvertor_files/github_icon.jpeg" height="60px">
+                            <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
                     </li> -->
