--- a/index.html
+++ b/index.html
@@ -172,19 +172,33 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 </p>
             </div>
         </div>
+
+		<div class="row">
+            <div class="col-md-12 col-md-offset-0 text-center">
+                <br><br>
+                <h2>
+                    YESBUT Dataset Overview
+                </h2>
+                <hr style="margin-top:0px">
+                <img src="./files/intro_example.pdf" class="img-responsive" alt="overview"><br>
+                <p class="text-justify" style="font-size: 16px;">
+                    <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: (1) a two-panel comic that forms a narrative with inherent contradictions; (2) a literal description of the comic narratives; (3) an explanation that illustrates the contradiction within the narrative; (4) the deep philosophy or underlying message the comic aims to convey; and (5) a title of the comic. Based on these components, we construct various tasks for comic understanding. 
+		</p>
+            </div>
 		
 		<div class="row">
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Method overview
+                    Data Construction Overview
                 </h2>
                 <hr style="margin-top:0px">
-                <img src="./NeRFInvertor_files/Overview.png" class="img-responsive" alt="overview"><br>
+                <img src="./files/annotation_pipeline.pdf" class="img-responsive" alt="overview"><br>
                 <p class="text-justify" style="font-size: 16px;">
-                    <b>Framework of NeRFInvertor.</b> Given the optimized latent code z_init, we fine-tune the generator and first apply image space supervision to push the generated image to match the input image in the original view d. To augment the NeRF-GAN manifold without worrying about visual artifacts in novel views, we then leverage the surrounding samples of the optimized latent code to regularize the realism and fidelity of the novel view and expression synthesis.
-                </p>
+                    <b>Framework of Data Construction.</b> For each comic, we annotate the corresponding literal description, contradiction explanation, underlying philosophy and comic title. We primarily rely on human annotators to obtain gold-standard annotations. Our annotation process included two stages: the progressive human-AI collaborative annotation stage and the quality check and cross-verification stage. See in our figure.
+		</p>
             </div>
+			
         </div>
 
         <div class="row">
