--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     YESBUT Dataset Overview
                 </h2>
                 <hr style="margin-top:0px">
-                <img src="./files/intro_example.pdf" class="img-responsive" alt="overview"><br>
+                <img src="./files/intro_example.png" class="img-responsive" alt="overview"><br>
                 <p class="text-justify" style="font-size: 16px;">
                     <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: (1) a two-panel comic that forms a narrative with inherent contradictions; (2) a literal description of the comic narratives; (3) an explanation that illustrates the contradiction within the narrative; (4) the deep philosophy or underlying message the comic aims to convey; and (5) a title of the comic. Based on these components, we construct various tasks for comic understanding. 
 		</p>
@@ -193,7 +193,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     Data Construction Overview
                 </h2>
                 <hr style="margin-top:0px">
-                <img src="./files/annotation_pipeline.pdf" class="img-responsive" alt="overview"><br>
+                <img src="./files/annotation_pipeline.png" class="img-responsive" alt="overview"><br>
                 <p class="text-justify" style="font-size: 16px;">
                     <b>Framework of Data Construction.</b> For each comic, we annotate the corresponding literal description, contradiction explanation, underlying philosophy and comic title. We primarily rely on human annotators to obtain gold-standard annotations. Our annotation process included two stages: the progressive human-AI collaborative annotation stage and the quality check and cross-verification stage. See in our figure.
 		</p>
