--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <ul class="nav nav-pills nav-justified">
-                    <li>
+                    <!--<li>
                         <a href="XXXX">
                             <img src="./YESBUT_files/paper_icon.png" height="60px">
                             <h4><strong>Paper</strong></h4>
                         </a>
-                    </li>
+                    </li>-->
 
                     <li>
                         <a href="https://arxiv.org/html/2405.19088v1">
@@ -107,61 +107,29 @@
                         </a>
                     </li>
 
-                    <!-- <li>
+                    <li>
                         <a onclick="alert(&#39;Code will be released soon.&#39;)">
                             <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </div>
 	
         
 
-        <!-- <div class="row">
-            <div class="col-md-12 col-md-offset-0 text-center">
-                <br></br>
-                <h2>
-                    Video
-                </h2>
-                <hr style="margin-top:0px">
-                <div class="text-center">
-                    <div style="position:relative;padding-top:56.25%;">
-                        <iframe src="https://www.youtube.com/embed/Uqzs4uN6v8M" allowfullscreen=""
-                            style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 		
-		<!-- <div class="row">
-            <div class="col-md-12 col-md-offset-0 text-center">
-                <br></br>
-                <h2>
-                    Virtual face generation with expression and viewpoint control 
-                </h2>
-                <hr style="margin-top:0px">
-                <p class="text-justify" style="font-size: 16px;">
-                    
-                </p>
-                <video style="width:100%;height:100%;" playsinline="" autoplay="" loop="" preload="" muted="">
-                    <source src="./files/teaser.mov" type="video/mp4">
-                </video>
-            </div>
-        </div> -->
+
 		
-		<div class="row">
-            <div class="col-md-12 col-md-offset-0 text-center">
-			
-                <a>
-                    <video style="width:100%;height:100%;" playsinline autoplay loop preload muted>
-                        <source src="./files/teaser.mov" type="video/mp4">
-                    </video>
-                </a>
-			
-                <br><br>
-			
+	<div class="row">
+	    <div class="col-md-12 col-md-offset-0 text-center">
+	        <!--<a>
+	            <img src="./files/teaser.jpg" alt="Teaser Image" style="width:100%;height:auto;">
+	        </a>
+		    -->
+	        <br><br>
+	
                 <h2>
                     Abstract
                 </h2>
