--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                         </a>
                     </li>
 
-                    <li>
+                    <!--<li>
                         <a href="XXXX">
                             <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
-                    </li>
+                    </li>-->
 
                     <li>
                         <a onclick="alert(&#39;Code will be released soon.&#39;)">
@@ -117,8 +117,46 @@
             </div>
         </div>
 	
-        
 
+	    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- carousel images -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="./files/intr0_example.jpg" alt="Image 1" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="./files/annotation_.jpg" alt="Image 2" style="width:100%;">
+                </div>
+
+                <div class="item">
+                    <img src="./files/image3.jpg" alt="Image 3" style="width:100%;">
+                </div>
+            </div>
+
+            <!-- button -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+    <!-- 引入jQuery和Bootstrap的JavaScript文件 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		
 
 		
