--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             <!-- carousel images -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./files/intr0_example.jpg" alt="Image 1" style="width:100%;">
+                    <img src="./files/intro_example.jpg" alt="Image 1" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="./files/annotation_.jpg" alt="Image 2" style="width:100%;">
+                    <img src="./files/annotation_pipeline.jpg" alt="Image 2" style="width:100%;">
                 </div>
 
                 <div class="item">
@@ -185,8 +185,10 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <h2>
                     YESBUT Dataset Overview
                 </h2>
+		<!--
                 <hr style="margin-top:0px">
                 <img src="./files/intro_example.png" class="img-responsive" alt="overview"><br>
+		    -->
                 <p class="text-justify" style="font-size: 16px;">
                     <b>Explanation of Dataset.</b>Our benchmark consists of YESBUT comics featuring contradictory narratives. Specifically, each sample includes: (1) a two-panel comic that forms a narrative with inherent contradictions; (2) a literal description of the comic narratives; (3) an explanation that illustrates the contradiction within the narrative; (4) the deep philosophy or underlying message the comic aims to convey; and (5) a title of the comic. Based on these components, we construct various tasks for comic understanding. 
 		</p>
