--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
             <!-- carousel images -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./files/intro_example.jpg" alt="Image 1" style="width:100%;">
+                    <img src="./files/intro_example.png" alt="Image 1" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="./files/annotation_pipeline.jpg" alt="Image 2" style="width:100%;">
+                    <img src="./files/sample.png" alt="Image 2" style="width:100%;">
                 </div>
 
                 <div class="item">
-                    <img src="./files/image3.jpg" alt="Image 3" style="width:100%;">
+                    <img src="./files/annotation_pipeline.png" alt="Image 3" style="width:100%;">
                 </div>
             </div>
 
