--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 	
 
-	    <div class="container">
+	    <div class="container" style="width:60%; ">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- indicators -->
             <ol class="carousel-indicators">
