--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 	
 
-	    <div class="container" style="width:60%; ">
+	    <div class="container" style="width:80%; ">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- indicators -->
             <ol class="carousel-indicators">
@@ -204,6 +204,18 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <img src="./files/annotation_pipeline.png" class="img-responsive" alt="overview"><br>
                 <p class="text-justify" style="font-size: 16px;">
                     <b>Framework of Data Construction.</b> For each comic, we annotate the corresponding literal description, contradiction explanation, underlying philosophy and comic title. We primarily rely on human annotators to obtain gold-standard annotations. Our annotation process included two stages: the progressive human-AI collaborative annotation stage and the quality check and cross-verification stage. See in our figure.
+		</p>
+            </div>
+
+            <div class="col-md-12 col-md-offset-0 text-center">
+                <br><br>
+                <h2>
+                    Task Design 
+                </h2>
+                <hr style="margin-top:0px">
+                <img src="./files/tasks.png" class="img-responsive" alt="overview"><br>
+                <p class="text-justify" style="font-size: 16px;">
+                    <b>Do Large Models Understand Humor in Juxtaposition?.</b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
 		</p>
             </div>
 			
