--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
             <!-- carousel images -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./files/intro_example.png" alt="Image 1" style="width:50%;height:60%;" >
+                    <img src="./files/1.png" alt="Image 1" style="width:50%;height:60%;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/sample.png" alt="Image 2" style="width:50%;height:60%;" >
+                    <img src="./files/2.png" alt="Image 2" style="width:50%;height:60%;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/sample2.png" alt="Image 3" style="width:50%;height:60%;">
+                    <img src="./files/3.png" alt="Image 3" style="width:50%;height:60%;">
                 </div>
             </div>
 
@@ -222,12 +222,10 @@ Our results show that even state-of-the-art models still lag behind human perfor
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Results Overview
+                    Future Works
                 </h2>
-                <hr style="margin-top:0px">
-                <img src="./files/results.png" class="img-responsive" alt="overview"><br>
                 <p class="text-justify" style="font-size: 16px;">
-                    <b>Results description.</b> For literal description and contradiction, we report BERT score (recall), BLEURT (BLT), and GPT evaluation score. Best scores are bold and the second best ones are marked with underline.
+                    <b>Tasks.</b> 1. Generation task -- Images generation based on the contradiciton 2. 
 		</p>
             </div>
 
