--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 	
 
-	    <div class="container" style="width:60%; ">
+	    <div class="container" style="width:80%; ">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- indicators -->
             <ol class="carousel-indicators">
@@ -130,15 +130,15 @@
             <!-- carousel images -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./files/1.png" alt="Image 1" style="width:50%;height:80%;" >
+                    <img src="./files/1.png" alt="Image 1" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/2.png" alt="Image 2" style="width:50%;height:80%;" >
+                    <img src="./files/2.png" alt="Image 2" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/3.png" alt="Image 3" style="width:50%;height:80%;">
+                    <img src="./files/3.png" alt="Image 3" style="display: block; margin: 0 auto; width: 100%; height: auto;">
                 </div>
             </div>
 
