--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     Future Works
                 </h2>
                 <p class="text-justify" style="font-size: 16px;">
-                    <b>Tasks.</b> 1. Generation task -- Images generation based on the contradiciton 2. 
+                    <b>Tasks.</b> 1. Generation task -- Images generation based on the contradiciton 
+			<br>
+			2. Enhance vision language models
 		</p>
             </div>
 
