--- a/index.html
+++ b/index.html
@@ -212,24 +212,30 @@ Our results show that even state-of-the-art models still lag behind human perfor
                 <h2>
                     Task Design 
                 </h2>
-                <hr style="margin-top:0px">
-                <img src="./files/tasks.png" class="img-responsive" alt="overview"><br>
-                <p class="text-justify" style="font-size: 16px;">
-                    <b>Do Large Models Understand Humor in Juxtaposition?.</b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
+		<hr style="margin-top:0px">
+		        <p class="text-justify" style="font-size: 16px;">
+		        	1. Literal Description Writing.
+				<br>
+				2. Contradiction Generation
+				<br>
+				3. Underlying Philosophy Selection. 
+				<br>
+				4. Title Matching
+				<br>
+				
+			</p>
+                    <b>Do Large Models Understand Humor in Juxtaposition? </b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
 		</p>
             </div>
 			
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Future Works
+                    Potential works (example)
                 </h2>
-                <p class="text-justify" style="font-size: 16px;">
-                    <b>Tasks.</b> 
-			<br>
-			1. Generation task -- Images generation based on the contradiciton 
-			<br>
-			2. Enhance vision language models
+                <hr style="margin-top:0px">
+                <img src="./files/4.png" class="img-responsive"><br>
+
 		</p>
             </div>
 
