--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 	
 
-	    <div class="container" style="width:80%; ">
+	    <div class="container" style="width:100%; ">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- indicators -->
             <ol class="carousel-indicators">
@@ -234,7 +234,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
                     Potential works (example)
                 </h2>
                 <hr style="margin-top:0px">
-                <img src="./files/4.png" class="img-responsive"><br>
+                <img src="./files/4.png" style="width: 60%; height: 60%;" ><br>
 
 		</p>
             </div>
