--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
                     </li>
 
                     <!--<li>
-                        <a href="XXXX">
+                        <a href="https://github.com/YuYin1/YESBUT_Homepage/edit/main/index.html">
                             <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
                     </li>-->
 
-                    <li>
+                    <!--<li>
                         <a onclick="alert(&#39;Code will be released soon.&#39;)">
                             <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
