--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </li>
 
                     <li>
-                        <a href="https://github.com/YuYin1/YESBUT_Homepage/edit/main/index.html">
+                        <a href="https://github.com/Tuo-Liang/YESBUT/tree/main">
                             <img src="./YESBUT_files/github_icon.jpeg" height="60px">
                             <h4><strong>Code</strong></h4>
                         </a>
