--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 				-->
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-size: 16px;">
-                    The website template was adapted from <a href="https://yuewuhkust.github.io/AniFaceGAN/">AniFaceGAN</a>, <a href="https://yudeng.github.io/GRAM/">GRAM</a> and <a href="https://jonbarron.info/mipnerf/">Mip-NeRF</a>.
+                    The comics on the website are created by Artist <a href="https://x.com/like_gudim">Gudim</a>.
                 </p>
             </div>
         </div>
