--- a/index.html
+++ b/index.html
@@ -37,17 +37,47 @@
                 <ul class="list-inline">
                     <li>
                         <a href="https://derekhu.com/" style="font-size: 16px;">
-                            Zhe Hu
+                            <b> Zhe Hu </b>
                         </a>
                         <sup>1</sup>
                     </li>
                     <li>
                         <a href="https://Tuo-Liang.github.io" style="font-size: 16px;">
-                            Tuo Liang
+                            <b> Tuo Liang </b>
                         </a>
                         <sup>2</sup>
                     </li>
                     <li>
+                        <a href="https://yin-yu.github.io/" style="font-size: 16px;">
+                            Jing Li
+                        </a>
+                        <sup>1</sup>
+                    </li>
+		    <li>
+                        <a href="https://yiren-lu.com/" style="font-size: 16px;">
+                            Yiren Lu
+                        </a>
+                        <sup>2</sup>
+                    </li>
+		    <li>
+                        <a href="https://www.linkedin.com/in/%E4%BA%91%E6%9D%A5-%E5%91%A8-932a022aa/?locale=en_US" style="font-size: 16px;">
+                            Yunlai Zhou
+                        </a>
+                        <sup>2</sup>
+                    </li>
+		    <li>
+                        <a href="https://www.linkedin.com/in/yiran-qiao-10298b238/" style="font-size: 16px;">
+                            Yiran Qiao
+                        </a>
+                        <sup>2</sup>
+                    </li>
+		    <li>
+                        <a href="https://jma712.github.io/" style="font-size: 16px;">
+                            Jing Ma
+                        </a>
+                        <sup>2</sup>
+                    </li>
+		    <li>
                         <a href="https://yin-yu.github.io/" style="font-size: 16px;">
                             Yu Yin
                         </a>
@@ -82,6 +112,17 @@
 		</div>
 		</div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <p>This paper has been accepted at NeurIPS 2024 as an oral presentation.</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+	
 
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
@@ -287,11 +328,11 @@ Our results show that even state-of-the-art models still lag behind human perfor
                                                 <div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17.1406px;">&nbsp;</div>
                                             </div>
                                             <div class="CodeMirror-code" style="">
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@inproceedings{XXXX,</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@@article{2024cracking,</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  journal={arXiv preprint arXiv:2405.19088},</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  year={2024}</span></pre>
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">}</span></pre>
                                             </div>
                                         </div>
                                     </div>
