--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
                 <h2>
                     Potential works (example)
                 </h2>
+		<p class="text-justify" style="font-size: 16px;">
+		    In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
+
+		</p>
+
+
+		    
                 <hr style="margin-top:0px">
                 <img src="./files/4.png" style="width: 60%; height: 60%;" ><br>
 
