--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	        <br><br>
 	
                 <h2>
-                    Abstract
+                    <b>Abstract</b>b
                 </h2>
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-size: 16px;">
@@ -224,7 +224,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    YESBUT Dataset Overview
+                    <b>YESBUT Dataset Overview</b>
                 </h2>
 		<!--
                 <hr style="margin-top:0px">
@@ -239,7 +239,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Data Construction Overview
+                    <b>Data Construction Overview</b>b
                 </h2>
                 <hr style="margin-top:0px">
                 <img src="./files/annotation_pipeline.png" class="img-responsive" alt="overview"><br>
@@ -251,7 +251,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Task Design 
+                    <b>Task Design </b>
                 </h2>
 		<hr style="margin-top:0px">
 		        <p class="text-justify" style="font-size: 16px;">
@@ -270,7 +270,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
 				<br>
 	
 			</p>
-		    
+		    <br>
                     <b>Do Large Models Understand Humor in Juxtaposition? </b> We aim to evaluate the capabilities of recent large (visual) language models in understanding humor through contradictions. This is challenging because it requires both social reasoning about human events and nonlinear logical reasoning about the narratives, going beyond the literal understanding of the comic. We design a series of tasks that require different levels of narrative understanding and reasoning abilities to evaluate the models’ performance in reading comics.
 		</p>
             </div>
@@ -278,7 +278,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Potential works (example)
+                    <b>Potential appllications of the dataset</b>
                 </h2>
 		<p class="text-justify" style="font-size: 16px;">
 		    In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
@@ -289,7 +289,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
 		    
                 <hr style="margin-top:0px">
                 <img src="./files/4.png" style="width: 60%; height: 60%;" ><br>
-
+		<img src="./files/5.png" style="width: 50%; height: 50%;" ><br>
 		</p>
             </div>
 
@@ -297,7 +297,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    Ethics Statement
+                    <b>Ethics Statement</b>
                 </h2>
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-size: 16px;">
@@ -313,7 +313,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
             <div class="col-md-12 col-md-offset-0">
                 <div class="text-center">
                     <h2>
-                        Citation
+                        <b>Citation</b>
                     </h2>
                 </div>
                 <hr style="margin-top:0px">
