--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
 
 		    
                 <hr style="margin-top:0px">
-                <img src="./files/4.png" style="width: 60%; height: 60%;" ><br>
-		<img src="./files/5.png" style="width: 50%; height: 50%;" ><br>
+                <img src="./files/4.jpg" style="width: 60%; height: 60%;" ><br>
+		<img src="./files/5.jpg" style="width: 50%; height: 60%;" ><br>
 		</p>
             </div>
 
