--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	        <br><br>
 	
                 <h2>
-                    <b>Abstract</b>b
+                    <b>Abstract</b>
                 </h2>
                 <hr style="margin-top:0px">
                 <p class="text-justify" style="font-size: 16px;">
@@ -239,7 +239,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
             <div class="col-md-12 col-md-offset-0 text-center">
                 <br><br>
                 <h2>
-                    <b>Data Construction Overview</b>b
+                    <b>Data Construction Overview</b>
                 </h2>
                 <hr style="margin-top:0px">
                 <img src="./files/annotation_pipeline.png" class="img-responsive" alt="overview"><br>
@@ -260,7 +260,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 				<br>
 				<br>
 				<br>
-				<b> 2. Contradiction Generation</b>
+				<b> 2. Contradiction Generation. </b>
 				GPT-4 and Claude-3 achieve better results than other VLM models. Notably, LLaVA-1.6 variants outperform their counterparts in generating contradiction descriptions. This is likely due to their improved reasoning ability and world knowledge [53], which are essential for understanding comic narratives and accurately capturing the relationship between the two panels. For LLMs, unlike VLMs, the Llama-3 and Mistral models achieve results comparable to ChatGPT. Another interesting observation is that Llama-3 and Mistral obtain similar or better results for contradiction generation compared to open-sourced VLMs, despite not having access to the original comic images.
 				<br>
 				<br>
@@ -293,7 +293,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
 		    
                 <hr style="margin-top:0px">
                 <img src="./files/4.jpg" style="width: 60%; height: 60%;" ><br>
-		<img src="./files/5.jpg" style="width: 45%; height: 60%;" ><br>
+		<img src="./files/5.jpg" style="width: 40%; height: 60%;" ><br>
 		</p>
             </div>
 
@@ -345,7 +345,7 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
                                                 <div class="CodeMirror-cursor" style="left: 4px; top: 0px; height: 17.1406px;">&nbsp;</div>
                                             </div>
                                             <div class="CodeMirror-code" style="">
-                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@@article{2024cracking,</span></pre>
+                                                <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;">@article{2024cracking,</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},</span></pre>
                                                 <pre class=" CodeMirror-line "><span style="padding-right: 0.1px;"> &nbsp;  journal={arXiv preprint arXiv:2405.19088},</span></pre>
