--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
             <!-- carousel images -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./files/1.png" alt="Image 1" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
+                    <img src="./files/2.png" alt="Image 1" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/2.png" alt="Image 2" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
+                    <img src="./files/3.png" alt="Image 2" style="display: block; margin: 0 auto; width: 100%; height: auto;" >
                 </div>
 
                 <div class="item">
-                    <img src="./files/3.png" alt="Image 3" style="display: block; margin: 0 auto; width: 100%; height: auto;">
+                    <img src="./files/2.png" alt="Image 3" style="display: block; margin: 0 auto; width: 100%; height: auto;">
                 </div>
             </div>
 
@@ -261,7 +261,7 @@ Our results show that even state-of-the-art models still lag behind human perfor
 				<br>
 				<br>
 				<b> 2. Contradiction Generation. </b>
-				GPT-4 and Claude-3 achieve better results than other VLM models. Notably, LLaVA-1.6 variants outperform their counterparts in generating contradiction descriptions. This is likely due to their improved reasoning ability and world knowledge [53], which are essential for understanding comic narratives and accurately capturing the relationship between the two panels. For LLMs, unlike VLMs, the Llama-3 and Mistral models achieve results comparable to ChatGPT. Another interesting observation is that Llama-3 and Mistral obtain similar or better results for contradiction generation compared to open-sourced VLMs, despite not having access to the original comic images.
+				GPT-4 and Claude-3 achieve better results than other VLM models. Notably, LLaVA-1.6 variants outperform their counterparts in generating contradiction descriptions. This is likely due to their improved reasoning ability and world knowledge, which are essential for understanding comic narratives and accurately capturing the relationship between the two panels. For LLMs, unlike VLMs, the Llama-3 and Mistral models achieve results comparable to ChatGPT. Another interesting observation is that Llama-3 and Mistral obtain similar or better results for contradiction generation compared to open-sourced VLMs, despite not having access to the original comic images.
 				<br>
 				<br>
 				<br>
