--- a/index.html
+++ b/index.html
@@ -285,16 +285,18 @@ Additionally, LLMs achieve performance comparable to open-sourced VL models.
                     <b>Potential appllications of the dataset</b>
                 </h2>
 		<p class="text-justify" style="font-size: 16px;">
-		    In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
+		    <b>Generative task </b>In the future, we intend to explore more deeply how AI can creatively engage with content. This includes generating pivotal turning points from one perspective and creating counterpoints to given scenarios, like generating a "But" image by given "Yes". The following is a simple example of it.
 
 		</p>
-
-
-		    
                 <hr style="margin-top:0px">
                 <img src="./files/4.jpg" style="width: 60%; height: 60%;" ><br>
 		<img src="./files/5.jpg" style="width: 40%; height: 60%;" ><br>
 		</p>
+		    
+		<p class="text-justify" style="font-size: 16px;">
+		<b>VLM image understanding </b>Second, we will explore more deeply on how VLM understand these images and whether can VLM understand these humorours images correctly. Having a logical understanding of these images will help VLM reasonint abilities. 
+		</p>
+
             </div>
 
 		<div class="row">
